--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <input type="text" id="valor1">
         <input type="text" id="valor2">
         <button onclick="somar()">somar</button>
-        <button>subtrair</button>
-        <button>multiplicar</button>
-        <button>dividir</button>
+        <button onclick="subtrair()">subtrair</button>
+        <button onclick="multiplicar()">multiplicar</button>
+        <button onclick="dividir()">dividir</button>
         <div id="resultado"></div>
     </div>
 
